Apps/Cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lab-gateway
  namespace: gateway 
  
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    argocd.argoproj.io/sync-wave: "2"
spec:
  gatewayClassName: cilium 
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.lab.internal"
    tls:
      mode: Terminate
      certificateRefs:
      - name: lab-wildcard-tls 
    allowedRoutes:
      namespaces:
        from: All
