Apps/Cilium/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-https-redirect
  namespace: gateway
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
  - name: lab-gateway
    namespace: gateway
    sectionName: http
  hostnames:
  - "*.lab.internal"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
        port: 443
